fix: update authentication with token
